<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blickfeld_driver</name>
  <version>1.5.5</version>
  <description>
    ROS2 device driver for LiDAR devices by Blickfeld GmbH
  </description>

  <maintainer email="hamidreza.houshiar@blickfeld.com">Hamidreza Houshiar</maintainer>

  <license>BSD</license>
  <url type="website">https://www.blickfeld.com</url>

  <author email="dennis.maier@blickfeld.com">Dennis Maier</author>
  <author email="andreas.wehe@blickfeld.com">Andreas Wehe</author>
  <author email="simon.weigl@blickfeld.com">Simon Weigl</author>
  <author email="robert.junge@blickfeld.com">Robert Junge</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>eigen</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <doc_depend>doxygen</doc_depend>

  <depend>blickfeld-scanner</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
